# expert-pancake

./: .denolint  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  deno.json  docker-compose.yaml  docker-compose.yml  expert-pancake.code-workspace  import_map.json  turbo-octo-broccoli.code-workspace
.cargo/: config.toml
.codex/prompts/: speckit.constitution.md  speckit.plan.md  speckit.tasks.md
.config/: nextest.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/instructions/: git.instructions.md  project.instructions.md
.github/prompts/: speckit.analyze.prompt.md  speckit.checklist.prompt.md  speckit.clarify.prompt.md  speckit.constitution.prompt.md  speckit.implement.prompt.md  speckit.plan.prompt.md  speckit.specify.prompt.md  speckit.tasks.prompt.md  speckit.taskstoissues.prompt.md
.github/workflows/: rust-quality.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: update-agent-context.sh
.specify/templates/: constitution-template.md  plan-template.md  spec-template.md  tasks-template.md
benches/: memory_ingest_latency.rs
crates/app_server/: Cargo.toml
crates/app_server/benches/: memory_ingest_latency.rs
crates/app_server/src/: config.rs  lib.rs  main.rs  middleware.rs  router.rs  state.rs
crates/app_server/src/handlers/: credential_get.rs  credential_register.rs  credential_search.rs  health.rs  memory_item_get.rs  mod.rs  search_memory_items.rs  source_get.rs  source_register.rs
crates/app_server/tests/: get_credential_contract.rs  health_readiness_contract.rs  memory_ingest_slo.rs  memory_ingest_smoke.rs  register_credential_contract.rs  search_credentials_contract.rs
crates/app_server/tests/contract/: health_readiness_contract.rs  register_source_standard_errors.rs
crates/app_server/tests/fixtures/register_credential/: clr.json  open_badges.json  unsupported_top_level.json
crates/app_server/tests/integration/: observability_tracing_flow.rs
crates/app_server/tests/support/: mod.rs
crates/core_infra/: Cargo.toml
crates/core_infra/src/: falkordb.rs  lib.rs  meilisearch.rs  setup.rs  surrealdb.rs
crates/core_infra/tests/: credential_projection_contract.rs  surreal_credential_store_contract.rs
crates/core_shared/: Cargo.toml
crates/core_shared/src/: error.rs  id.rs  id_gen.rs  lib.rs  urn.rs
crates/mod_memory/: Cargo.toml
crates/mod_memory/src/: bootstrap.rs  lib.rs
crates/mod_memory/src/application/: get_memory_item.rs  get_source.rs  index_memory_items.rs  mod.rs  register_source.rs  search_memory_items.rs
crates/mod_memory/src/domain/: credential.rs  event.rs  memory_item.rs  mod.rs  normalization.rs  source.rs  source_external_id.rs  source_identity.rs
crates/mod_memory/src/infra/: graph.rs  indexer.rs  meili_indexer.rs  migration.rs  mod.rs  repo.rs  surreal_memory_query.rs  surreal_memory_repo.rs  surreal_source_query.rs  surreal_source_repo.rs
crates/mod_memory/tests/: normalization_edges.rs  normalization_flow.rs  normalized_json_hash.rs
crates/mod_memory/tests/contract/: indexing_outbox_mapping_contract.rs  surreal_memory_store_contract.rs
crates/mod_memory/tests/integration/: get_memory_item_flow.rs  register_source_replay_hashing.rs  register_source_standard_flow.rs
crates/repo_tests/: Cargo.toml
crates/repo_tests/contract/: README.md
crates/repo_tests/fixtures/perf/: open_badges_small.json  workload_profile.json
crates/repo_tests/integration/: memory_ingest_vertical_slice.rs
crates/repo_tests/support/: mod.rs
crates/tests/: Cargo.toml
crates/tests/benches/: memory_ingest_latency.rs
crates/tests/contract/: get_memory_item_contract.rs  get_source_contract.rs  meilisearch_projection_contract.rs  register_source_standard_validation_matrix.rs  search_memory_items_contract.rs  surreal_source_store_contract.rs
crates/tests/fixtures/perf/: clr_small.json
crates/tests/fixtures/register_source/replay_hashing/: clr_compact.json  clr_conflict.json  open_badges_compact.json
crates/tests/fixtures/register_source/validation_matrix/: clr_schema_invalid.json
crates/tests/integration/: indexing_status_mapping_flow.rs  register_source_concurrency.rs  register_source_flow.rs  register_source_replay_hashing.rs
crates/tests/perf/: memory_ingest_slo.rs
crates/tests/support/: mod.rs
docs/: spec-tdd-loop.md
specs/001-memory-ingest/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-memory-ingest/adr/: 0001-direct-standard-ingest.md  0002-schema-native-api.md
specs/001-memory-ingest/checklists/: requirements.md
specs/001-memory-ingest/contracts/: README.md  memory-ingest.openapi.yaml
specs/002-canonical-source-external-id/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-canonical-source-external-id/checklists/: requirements.md
specs/002-canonical-source-external-id/contracts/: canonical-vocabulary.yaml  memory-ingest.openapi.yaml
src/: lib.rs  main.ts
src/analytics/: events.ts  reports.ts  tracking.ts
src/auth/: login.ts  lti.ts  session.ts  token.ts
src/catalog/: items.ts  search.ts  taxonomy.ts
src/shared/: index.ts
tests/contract/: README.md  get_source_contract.rs  health_readiness_contract.rs  indexing_outbox_mapping_contract.rs  openapi_smoke.rs  register_source_contract.rs  register_source_standard_errors.rs  register_source_standard_validation_matrix.rs  search_memory_items_contract.rs  surreal_memory_store_contract.rs  surreal_retention_contract.rs  surreal_source_store_contract.rs
tests/fixtures/perf/: canonical_markdown_small.json
tests/fixtures/register_source/: canonical_conflict.json  canonical_success.json
tests/integration/: get_source_flow.rs  indexing_status_mapping_flow.rs  multi_instance_consistency.rs  observability_metrics.rs  observability_tracing_flow.rs  register_source_concurrency.rs  register_source_flow.rs  register_source_replay_hashing.rs  search_projection_flow.rs
tests/perf/: memory_ingest_slo.rs
tests/support/: mod.rs
tests/unit/: normalization_edges.rs  normalized_json_hash.rs
(+14 files in other folders)
