[workspace]
members = [
    "crates/app_server",
    "crates/core_infra",
    "crates/core_shared",
    "crates/mod_memory",
    "crates/repo_tests",
]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.1", features = ["json", "macros"] }
http = "1.3.1"
meilisearch-sdk = "0.28.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
surrealdb = { version = "2.3.3", default-features = false, features = ["protocol-ws", "rustls"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.2", features = ["timeout", "util"] }
tower-http = { version = "0.6.2", features = ["request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v5"] }
validator = { version = "0.20.0", features = ["derive"] }