[workspace]
members = [
    "crates/app_server",
    "crates/core_infra",
    "crates/core_shared",
    "crates/mod_memory",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.1", features = ["json", "macros"] }
criterion = { version = "0.6.0", default-features = false, features = ["cargo_bench_support"] }
http = "1.3.1"
insta = { version = "1.42.1", features = ["json"] }
jsonschema = { version = "0.45.0", default-features = false }
mockall = "0.13.1"
proptest = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.16.0", features = ["serde", "v4", "v5"] }
