[package]
name = "app_server"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum.workspace = true
core_infra = { path = "../core_infra" }
core_shared = { path = "../core_shared" }
http.workspace = true
mod_memory = { path = "../mod_memory" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
