[package]
name = "mod_memory"
version = "0.1.0"
edition.workspace = true

[dependencies]
core_infra = { path = "../core_infra" }
core_shared = { path = "../core_shared" }
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
mockall.workspace = true
proptest.workspace = true
