[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
app_server = { path = "../app_server" }
core_infra = { path = "../core_infra" }
core_shared = { path = "../core_shared" }
mod_memory = { path = "../mod_memory" }

axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

time = { version = "0.3.44", features = ["serde"] }

[[test]]
name = "health_readiness_contract"
path = "./contract/health_readiness_contract.rs"

[[test]]
name = "register_source_replay_hashing"
path = "./integration/register_source_replay_hashing.rs"

[[test]]
name = "surreal_source_store_contract"
path = "./contract/surreal_source_store_contract.rs"

[[test]]
name = "surreal_memory_store_contract"
path = "./contract/surreal_memory_store_contract.rs"

[[test]]
name = "surreal_retention_contract"
path = "./contract/surreal_retention_contract.rs"

[[test]]
name = "indexing_outbox_mapping_contract"
path = "./contract/indexing_outbox_mapping_contract.rs"

[[test]]
name = "register_source_contract"
path = "./contract/register_source_contract.rs"

[[test]]
name = "register_source_standard_errors"
path = "./contract/register_source_standard_errors.rs"

[[test]]
name = "get_memory_item_contract"
path = "./contract/get_memory_item_contract.rs"

[[test]]
name = "get_source_contract"
path = "./contract/get_source_contract.rs"

[[test]]
name = "register_source_standard_validation_matrix"
path = "./contract/register_source_standard_validation_matrix.rs"

[[test]]
name = "openapi_smoke"
path = "./contract/openapi_smoke.rs"

[[test]]
name = "register_source_flow"
path = "./integration/register_source_flow.rs"

[[test]]
name = "register_source_standard_flow"
path = "./integration/register_source_standard_flow.rs"

[[test]]
name = "get_memory_item_flow"
path = "./integration/get_memory_item_flow.rs"

[[test]]
name = "get_source_flow"
path = "./integration/get_source_flow.rs"

[[test]]
name = "register_source_concurrency"
path = "./integration/register_source_concurrency.rs"

[[test]]
name = "multi_instance_consistency"
path = "./integration/multi_instance_consistency.rs"

[[test]]
name = "memory_ingest_vertical_slice"
path = "./integration/memory_ingest_vertical_slice.rs"

[[test]]
name = "search_memory_items_contract"
path = "./contract/search_memory_items_contract.rs"

[[test]]
name = "meilisearch_projection_contract"
path = "./contract/meilisearch_projection_contract.rs"

[[test]]
name = "search_projection_flow"
path = "./integration/search_projection_flow.rs"

[[test]]
name = "indexing_status_mapping_flow"
path = "./integration/indexing_status_mapping_flow.rs"

[[test]]
name = "observability_tracing_flow"
path = "./integration/observability_tracing_flow.rs"

[[test]]
name = "observability_metrics"
path = "./integration/observability_metrics.rs"

[[test]]
name = "memory_ingest_slo"
path = "./perf/memory_ingest_slo.rs"

[[bench]]
name = "memory_ingest_latency"
path = "./benches/memory_ingest_latency.rs"
harness = false