[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
app_server = { path = "../app_server" }
core_infra = { path = "../core_infra" }
core_shared = { path = "../core_shared" }
mod_memory = { path = "../mod_memory" }

axum.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

time = { version = "0.3.44", features = ["serde"] }

[[test]]
name = "multi_instance_consistency"
path = "./integration/multi_instance_consistency.rs"

[[test]]
name = "memory_ingest_vertical_slice"
path = "./integration/memory_ingest_vertical_slice.rs"

[[test]]
name = "search_projection_flow"
path = "./integration/search_projection_flow.rs"

[[test]]
name = "indexing_status_mapping_flow"
path = "./integration/indexing_status_mapping_flow.rs"